--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Przemysław Włodarczyk <przemyslaw.wlodarczyk@intmail.pl>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 click = "^8.1.6"
 typer = "^0.12.5"
 
@@ -16,6 +16,7 @@ cyclocalc = "cyclocalc.cli:app"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
 pre-commit = "^4.0.1"
+poetry-plugin-export = "^1.9.0"
 
 [build-system]
 requires = ["poetry-core"]
