--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,14 @@ license = "GPL-2.0-only"
 homepage = "https://github.com/pewiok/cyclocalc"
 repository = "https://github.com/pewiok/cyclocalc"
 documentation = "https://github.com/pewiok/cyclocalc#readme"
-keywords = ["cli", "tool", "cyclomatic", "complexity"]
+keywords = ["cli", "tool", "cyclomatic", "complexity", "security", "metrics"]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
+    "Operating System :: OS Independent",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Security"
+]
 
 [tool.poetry.dependencies]
 python = "^3.11"
